# ellis-kuro-siwo-blue

./: .gitignore  README.md  dataset_exploration.ipynb  pyproject.toml
KuroSiwo/: dataset_exploration.ipynb  download_pickle.py  main.py  stats.pkl  train_uv.sh
KuroSiwo/configs/: config.json
KuroSiwo/configs/method/mae/: temporal_mae.json  temporal_mae_independent_masks.json
KuroSiwo/dataset/: Dataset.py
KuroSiwo/models/: temporal_mae.py
KuroSiwo/training/: train_temporal_mae.py
KuroSiwo/utilities/: utilities.py
